feat(validation): add runtime entity-schema validator with XML report